Driver property isn't purple #47433

Closed
opened 2016-02-16 14:35:10 +01:00 by Hjalti Hjálmarsson · 7 comments

Old driver is lingering from an older version of blender, so a value has a "driver" without being visibly there.

Sergey said he'd take a look.gamera.blend

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Old driver is lingering from an older version of blender, so a value has a "driver" without being visibly there. Sergey said he'd take a look.[gamera.blend](https://archive.blender.org/developer/F283200/gamera.blend) **System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Hjalti Hjálmarsson 2016-02-16 14:35:10 +01:00
Author
Member

Added subscriber: @Hjalti

Added subscriber: @Hjalti
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

What seems to contribute to the problems here is that on the properties which aren't getting indicated as being driven, the RNA Paths refer to the shapekeys by index instead of by name.

Adding a new driver to the affected properties will magically make both get detected as being driven.


After further checking, it's because to look up the driver FCurves, we call: RNA_path_from_ID_to_property()
That now only does string-based lookups, hence the driver does not get found.

To fix, we'd probably have to pass the Shapekey datablock down to shapekey_adrcodes_to_paths(), so that we could lookup the names of the shapekeys involved. That however could prove a bit messy to do.

What seems to contribute to the problems here is that on the properties which aren't getting indicated as being driven, **the RNA Paths refer to the shapekeys by index instead of by name**. Adding a new driver to the affected properties will magically make both get detected as being driven. --- After further checking, it's because to look up the driver FCurves, we call: RNA_path_from_ID_to_property() That now only does string-based lookups, hence the driver does not get found. To fix, we'd probably have to pass the Shapekey datablock down to shapekey_adrcodes_to_paths(), so that we could lookup the names of the shapekeys involved. That however could prove a bit messy to do.
Member

(Side note: For making it easier to see what's going on, I recommend enabling "Show Sliders" in the Graph Editor)

(Side note: For making it easier to see what's going on, I recommend enabling "Show Sliders" in the Graph Editor)

This issue was referenced by 6c02c5fb09

This issue was referenced by 6c02c5fb09eae727c4db57c29c705ebe8be92b6b
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#47433
No description provided.